--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
-<body >
-  <div id="app">{{ message }}</div>
+
+<body>
+  <div id="app">
+    <el-dropdown>
+      <el-button type="primary">
+        +
+      </el-button>
+      <el-dropdown-menu trigger="click" slot="dropdown">
+      <!-- 使用 router-link 组件来导航. -->
+      <!-- 通过传入 `to` 属性指定链接. -->
+      <!-- <router-link> 默认会被渲染成一个 `<a>` 标签 -->
+        <el-dropdown-item> <router-link to="/foo">Go to Foo</router-link></el-dropdown-item>
+        <el-dropdown-item><router-link to="/bar">Go to Bar</router-link></el-dropdown-item>
+      </el-dropdown-menu>
+    </el-dropdown>
+
+    <!-- 路由出口 -->
+    <!-- 路由匹配到的组件将渲染在这里 -->
+    <router-view></router-view>
+  </div>
 </body>
+
 </html>
