--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+  <div id="header">
+    <img src="../img/header.jpg" alt="头图">
+  </div>
+  
   <div id="app">
     <el-dropdown>
       <el-button type="primary">
@@ -24,7 +28,9 @@
 
     <!-- 路由出口 -->
     <!-- 路由匹配到的组件将渲染在这里 -->
-    <router-view></router-view>
+    <router-view>
+      <h1>测试</h1>
+    </router-view>
   </div>
 </body>
 
