--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>绿音</title>
 </head>
 
 <body>
   <div id="header">
-    <img src="../img/header.jpg" alt="头图">
+    <img src="/scaugreen/img/header.jpg" alt="头图">
   </div>
   
   <div id="app">
