--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="header">
-    <img src="/scaugreen/img/header.jpg" alt="头图">
+    <img src="https://github.com/alwxkxk/scaugreen/blob/gh-pages/img/header.JPG" alt="头图">
   </div>
   
   <div id="app">
@@ -28,9 +28,7 @@
 
     <!-- 路由出口 -->
     <!-- 路由匹配到的组件将渲染在这里 -->
-    <router-view>
-      <h1>测试</h1>
-    </router-view>
+    <router-view></router-view>
   </div>
 <script type="text/javascript" src="bundle.js"></script></body>
 
