--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="header">
-    <img src="https://github.com/alwxkxk/scaugreen/blob/gh-pages/img/header.JPG" alt="头图">
+    <img src="http://ox6t89mri.bkt.clouddn.com/scaugreen-header.JPG" alt="头图">
   </div>
   
   <div id="app">
