--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link type="text/css" href="./jquery.mmenu.css" rel="stylesheet" />
+  <link href="./hamburgers.min.css" rel="stylesheet">
   <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="./jquery.mmenu.js"></script>
   <title>绿音</title>
@@ -13,30 +14,28 @@
 
 <body>
   <div id="header">
-    <img src="http://ox6t89mri.bkt.clouddn.com/scaugreen-header.JPG" alt="头图">
+    <img src="./img/scaugreen-header.JPG" alt="头图">
   </div>
-
   <div id="app">
-    <!-- <el-dropdown>
-      <el-button type="primary">
-        +
-      </el-button>
-      <el-dropdown-menu trigger="click" slot="dropdown" >
-        <el-dropdown-item v-for="page of pages"> <router-link v-bind:to="'/'+page.title">{{page.title}}</router-link></el-dropdown-item>
-      </el-dropdown-menu>
-    </el-dropdown> -->
-    <!-- 导航栏 -->
     <nav id="menu">
       <ul>
-        <router-link v-bind:to="'/'+page.title">{{page.title}}</router-link>
+        <li v-for="page of pages">
+            <router-link v-bind:to="'/'+page.title">{{page.title}}</router-link>
+        </li>
+        
       </ul>
     </nav>
+
     <!-- 导航栏按钮 -->
-    <div id="menu-button">
-      <button type="button" class="btn btn-default" aria-label="Left Align">
-                  <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
-                </button>
-    </div>
+    <div id="menu-button" class="fixed">
+      <button id="my-icon" class="hamburger hamburger--arrow is-active" type="button">
+         <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+         </span>
+      </button>
+   </div>
+    
+
     <!-- 路由出口 -->
     <!-- 路由匹配到的组件将渲染在这里 -->
     <router-view></router-view>
