--- a/src/index.html
+++ b/src/index.html
@@ -5,33 +5,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+      <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+      <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous">
+  <link type="text/css" href="./jquery.mmenu.css" rel="stylesheet" />
+  <link href="./hamburgers.min.css" rel="stylesheet">
+
+  <title>绿音</title>
 </head>
 
 <body>
   <div id="header">
-    <img src="../img/header.jpg" alt="头图">
+    <img src="./img/scaugreen-header.JPG" alt="头图">
   </div>
-  
   <div id="app">
-    <el-dropdown>
-      <el-button type="primary">
-        +
-      </el-button>
-      <el-dropdown-menu trigger="click" slot="dropdown" >
-      <!-- 使用 router-link 组件来导航. -->
-      <!-- 通过传入 `to` 属性指定链接. -->
-      <!-- <router-link> 默认会被渲染成一个 `<a>` 标签 -->
-        <el-dropdown-item v-for="page of pages"> <router-link v-bind:to="'/'+page.title">{{page.title}}</router-link></el-dropdown-item>
-      </el-dropdown-menu>
-    </el-dropdown>
+    <nav id="menu">
+      <ul>
+        <li v-for="page of pages">
+          <router-link v-bind:to="'/'+page.title">{{page.title}}</router-link>
+        </li>
+
+      </ul>
+    </nav>
+
+    <!-- 导航栏按钮 -->
+    <div id="menu-button">
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+              <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+            </button>
+    </div>
+
 
     <!-- 路由出口 -->
     <!-- 路由匹配到的组件将渲染在这里 -->
-    <router-view>
-      <h1>测试</h1>
-    </router-view>
+    <router-view></router-view>
   </div>
+  <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+  <script type="text/javascript" src="./jquery.mmenu.js"></script>
 </body>
 
 </html>
