--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+      <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous">
   <link type="text/css" href="./jquery.mmenu.css" rel="stylesheet" />
   <link href="./hamburgers.min.css" rel="stylesheet">
-  <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-  <script type="text/javascript" src="./jquery.mmenu.js"></script>
+
   <title>绿音</title>
 </head>
 
@@ -20,26 +22,26 @@
     <nav id="menu">
       <ul>
         <li v-for="page of pages">
-            <router-link v-bind:to="'/'+page.title">{{page.title}}</router-link>
+          <router-link v-bind:to="'/'+page.title">{{page.title}}</router-link>
         </li>
-        
+
       </ul>
     </nav>
 
     <!-- 导航栏按钮 -->
-    <div id="menu-button" class="fixed">
-      <button id="my-icon" class="hamburger hamburger--arrow is-active" type="button">
-         <span class="hamburger-box">
-            <span class="hamburger-inner"></span>
-         </span>
-      </button>
-   </div>
-    
+    <div id="menu-button">
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+              <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+            </button>
+    </div>
+
 
     <!-- 路由出口 -->
     <!-- 路由匹配到的组件将渲染在这里 -->
     <router-view></router-view>
   </div>
+  <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+  <script type="text/javascript" src="./jquery.mmenu.js"></script>
 <script type="text/javascript" src="bundle.js"></script></body>
 
 </html>
