--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-      <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-      crossorigin="anonymous">
-  <link type="text/css" href="./jquery.mmenu.css" rel="stylesheet" />
-  <link href="./hamburgers.min.css" rel="stylesheet">
+  <link href="./img/favicon.ico" rel="icon" type="image/x-icon" />
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link type="text/css" href="./css/jquery.mmenu.css" rel="stylesheet" />
 
   <title>绿音</title>
 </head>
 
 <body>
   <div id="header">
-    <img src="./img/scaugreen-header.JPG" alt="头图">
   </div>
   <div id="app">
     <nav id="menu">
@@ -40,8 +37,8 @@
     <!-- 路由匹配到的组件将渲染在这里 -->
     <router-view></router-view>
   </div>
-  <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-  <script type="text/javascript" src="./jquery.mmenu.js"></script>
+  <script src="./js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="./js/jquery.mmenu.js"></script>
 </body>
 
 </html>
