--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="./img/favicon.ico" rel="icon" type="image/x-icon" />
+  <link href="http://ox6t89mri.bkt.clouddn.com/favicon.ico" rel="icon" type="image/x-icon" />
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link type="text/css" href="./css/jquery.mmenu.css" rel="stylesheet" />
 
